# CTU-TimeTable-Generator

./: .editorconfig  .gitignore  404.html  README.md  data.json  generator.html  generator.txt  index.html  index.txt  pyproject.toml  robots.txt  sitemap.xml
.github/actions/setup/: action.yml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: ci-python.yml  ci-web.yml  deploy-web.yml  fetch-data.yml
_next/static/F8AS44zuyT16skVQg0jXc/: _buildManifest.js
_next/static/chunks/: 127-7e5637447567024f.js  127-7e5637447567024f.js.map  127-baf09fd98d0eca5d.js  134.7d52a40dbd075765.js  134.ab016b2dde50670c.js  152-281b90a017565bea.js  222-8e845e361fe403f3.js  234-eed7e0a20b5a9ff3.js  247-bb3cbb0077ea788c.js  263-6d94be6eaafe90dd.js  263-6d94be6eaafe90dd.js.map  263-7056bbad13c6c174.js  294-ba2570d9d9e4b8b0.js  31-a1155db8c1898701.js  339.a4814917d18609c8.js  339.d12318124bd4edbe.js  339.e85f85156a30707a.js  339.ea03851379dd5779.js  339.eb89a2b9ce027d0f.js  382.3355c877dd95a31a.js  562-6e7151f8120bb3bc.js  596-549c3b6fd23b0aaa.js  596-746ed3cf79711f7f.js  596-746ed3cf79711f7f.js.map  596-c12943c200241e3c.js  596-d5a73fbc9759c87b.js  643.920ac1c306dd170f.js  643.920ac1c306dd170f.js.map  694-9c4c16847ca0907d.js  694-9c4c16847ca0907d.js.map  713-c2932c76314f1506.js  713-c2932c76314f1506.js.map  779-b1fa48bd287103d2.js  90-aa81d405707227c9.js  ec3863c0-2c444794526f760e.js  ec3863c0-4c9e717724532d5e.js  ec3863c0-4c9e717724532d5e.js.map  ec3863c0-9efea6006391426b.js  ec3863c0-a66402bee1de932b.js  ec3863c0-c94a5328c99da4e5.js  (+30 more)
_next/static/chunks/app/: error-0d2d03f2d139f7a9.js  error-0d2d03f2d139f7a9.js.map  error-60a3df536b9fe44a.js  layout-0d8833c5756ed6b4.js  layout-21f776ef9b61f9bc.js  layout-31b79cec33680e0b.js  layout-37190c65d8c02bd4.js  layout-37190c65d8c02bd4.js.map  layout-53794da09ca25318.js  layout-5bdace1d02af3f84.js  layout-60abc94b4e2e6065.js  layout-76f397441eb0cace.js  layout-854856e6a47c18a7.js  layout-8787f910d49f371c.js  layout-9bb82ec702989be1.js  layout-e1689ce554d8d3e8.js  layout-e6a4e733d4f10d18.js  layout-e91c4eae7c949d70.js  page-02950696586b6cc7.js  page-094e5cdcdf125496.js  (+12 more)
ctu-timetable-generator/: .browserslistrc  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  README.md  next.config.js  next.config.mjs  package.json  tsconfig.json
ctu-timetable-generator/src/: consts.ts  lib.ts  paths.ts  types.ts
ctu-timetable-generator/src/app/: error.tsx  layout.tsx  page.tsx  providers.tsx  sitemap.ts
ctu-timetable-generator/src/components/: nav.tsx
kos-loader/: README.md  pyproject.toml
kos-loader/kos_loader/: consts.py  kos_loader.py  lib.py  requests.py
kos_loader/: consts.py  kos_loader.py  lib.py  requests.py
(+30 files in other folders)
