[project]
name = "kos-loader"
version = "0.1.0"
description = "Downloader of time schedule data from the KOS API"
requires-python = "^3.13"
authors = [
  { name = "Antonín Kříž", email = "<15214494+antoninkriz@users.noreply.github.com>" }
]
license = "MIT"
readme = "README.md"
keywords = ["ctu", "cvut", "fit", "timetable", "generator", "optimization", "kos", "api", "downloader"]
classifier = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: TypeScript",
  "Framework :: AsyncIO",
  "Framework :: aiohttp",
  "Operating System :: POSIX :: Linux",
  "Topic :: Home Automation",
  "Topic :: File Formats :: JSON",
  "Topic :: Utilities",
  "Typing :: Typed",
]

dependencies = [
  "aiofiles>=24.1.0,<25.0.0",
  "aiohttp>=3.11.11,<4.0.0",
  "yarl>=1.18.3,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0,<25.0.0",
  "isort>=6.0.0,<7.0.0",
  "mypy>=1.14.1,<2.0.0",
  "pylint>=3.3.4,<4.0.0",
  "types-aiofiles>=24.1.0.20241221,<25.0.0"
]

[project.urls]
homepage = "https://github.com/antoninkriz/CTU-TimeTable-Generator"

[tool.poetry]
packages = [{ include = "kos_loader" }]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
target-version = ['py313']

[tool.isort]
line_length = 160

[tool.pylint.main]
jobs = 0

[tool.pylint.design]
max-locals = 20
max-attributes = 10
min-public-methods = 0

[tool.pylint.messages_control]
max-line-length = 160
